refactor(manifest): change logging map to unmodifiable for immutability